tests/error/linear_errors/field_copy3.err
Error: Copy violation (at $FILE:18:16)
   | 
16 | @guppy(module)
17 | def foo(s: MyStruct @owned) -> tuple[qubit, MyStruct]:
18 |     return s.q, s
   |                 ^ Field `s.q` with non-copyable type `qubit` cannot be
   |                   returned ...
   | 
18 |     return s.q, s
   |            --- since it was already returned here

Guppy compilation failed due to 1 previous error
